there is no day off

--- a/topSecretProject/stylesheet.css
+++ b/topSecretProject/stylesheet.css
@@ -19,6 +19,8 @@ document.write {
     text-align: center;
 }
 
+/* god damn it */
+
 input.button {
     background-color: bisque;
     border: burlywood;
