--- a/topSecretProject/Stylesheets/uniStylesheet.css
+++ b/topSecretProject/Stylesheets/uniStylesheet.css
@@ -21,7 +21,7 @@ document.write {
 
 /* god damn it */
 
-input.button {
+button {
     background-color: bisque;
     border: burlywood;
     text-align: center;
