--- a/02-feb-21/22-02/index.css
+++ b/02-feb-21/22-02/index.css
@@ -89,3 +89,12 @@ iframe {
   margin-right: auto;
   margin-top: 5%;
 }
+
+table {
+  background-color: black;
+  margin: 2%;
+}
+th {
+  background-color: blanchedalmond;
+  margin: 10%;
+}
