--- a/03-mar-21/01-03/style.css
+++ b/03-mar-21/01-03/style.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-/* pseudo elements VS  pseudo classes */
+/* === pseudo elements VS  pseudo classes === */
 
 /* pseudo-class is a keyword added to a selector that specifies a special state of the selected element(s). */
 /* more pseudo classes
@@ -12,18 +12,48 @@
   :hover */
 
 /* pseudo-element is a keyword added to a selector that lets you style a specific part of the selected element(s) */
-/* ::placeholder  */
-
 /* ::before  Vs :before */
 /*   
     :before css2 and ::before is css3
   */
 
+div[class="main-text"]::after {
+  content: "🦘";
+}
+div[class="main-text"]::before {
+  content: "🐼";
+}
+/* ::placeholder  */
+[type="text"]::placeholder {
+  color: green;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
 /* ::first-letter (:first-letter) */
-
+.text::first-letter {
+  color: blue;
+  font-weight: bold;
+  font-size: 2rem;
+}
 /* display:none vs opacity: 0 */
-
+.tree {
+  width: 25vw;
+  height: 25vw;
+  box-shadow: 5px 5px 5px cadetblue;
+  opacity: 0.5;
+  filter: grayscale(50);
+}
+.tree:hover {
+  transition: 1.5s ease-in-out;
+  opacity: 1;
+  filter: grayscale(0);
+  width: 35vw;
+  height: 35vw;
+}
 /* vh & vw */
+/* 1 vh = 1% of height of viewport */
+/* 1 vw = 1% of width of viewport */
 
 /* visual content like img */
 /*  % , border-radius */
