--- a/03-mar-21/01-03/style.css
+++ b/03-mar-21/01-03/style.css
@@ -4,6 +4,13 @@
   padding: 0;
 }
 
+:root {
+  --my-color: pink;
+  --my-border: black solid 9px;
+}
+/* === Variables^ ==== */
+/* use variable: 
+color: var(--my-color) */
 /* === pseudo elements VS  pseudo classes === */
 
 /* pseudo-class is a keyword added to a selector that specifies a special state of the selected element(s). */
@@ -25,14 +32,13 @@ div[class="main-text"]::before {
 }
 /* ::placeholder  */
 [type="text"]::placeholder {
-  color: green;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    "Lucida Sans Unicode", "Geneva", Verdana, sans-serif;
 }
 
 /* ::first-letter (:first-letter) */
 .text::first-letter {
-  color: blue;
+  color: var(--my-color);
   font-weight: bold;
   font-size: 2rem;
 }
@@ -59,6 +65,7 @@ div[class="main-text"]::before {
   width: 50vw;
   height: auto;
   background-color: coral;
+  border: var(--my-border);
 }
 ul li {
   display: inline-block;
