--- a/03-mar-21/02-03/style.css
+++ b/03-mar-21/02-03/style.css
@@ -8,6 +8,10 @@ h1 {
   margin-top: 2%;
   text-align: center;
 }
+h1:fullscreen {
+  color: indianred;
+  background-color: indigo;
+}
 h2 {
   text-align: center;
   margin-bottom: 2%;
@@ -24,27 +28,21 @@ p {
 img {
   margin: 2rem auto;
   display: flex;
-  width: 60%;
+  width: 75%;
 }
 
 div:fullscreen {
   background-color: peachpuff;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: 0;
-  box-sizing: border-box;
-  width: 20%;
-  height: 100%;
-  object-fit: contain;
 }
 
 /* ::after simple */
 .after::after {
   content: "I made this with ::after in CSS";
-  color: hotpink;
+  color: indianred;
+}
+p:nth-of-type(3)::after {
+  content: "I made one more";
+  color: palegreen;
 }
 /* ::after a little fancy */
 span[data-descr] {
@@ -66,9 +64,4 @@ span[data-descr]:hover::after {
   color: #000000;
   font-size: 14px;
   z-index: 1;
-}
-
-div:nth-child(2)::after {
-  content: "I made this with ::after in CSS";
-  color: palegreen;
 }
