--- a/03-mar-21/04-03/style.css
+++ b/03-mar-21/04-03/style.css
@@ -46,3 +46,7 @@ body {
 /*  special effects */
 
 /* the shortcut */
+
+/* flex: grow or shrink to fit item 
+flex-grow | flex shrink | flex-bases |
+flex: 1 1 100px*/
