--- a/04-apr-21/12-04/style.css
+++ b/04-apr-21/12-04/style.css
@@ -1,3 +1,5 @@
 /* BOOTSTRAP */
 
 /* let's use bootstrap */
+
+/* overwriting Bootstrap CSS with own CSS file – that's why it is in the html file beneath the bootstrap link  */
