--- a/04-apr-21/19-04/src/scss/_mixin.scss
+++ b/04-apr-21/19-04/src/scss/_mixin.scss
@@ -28,6 +28,16 @@
   width: 10vw;
   height: 10vw;
 }
+@mixin container {
+  width: 75vw;
+  height: 40vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+@mixin miniBox {
+  width: 2vw;
+  height: 2vw;
+}
 // animation fade in
 @mixin fade-in($time) {
   animation-name: fade-in;
