--- a/04-apr-21/19-04/src/scss/_shapes.scss
+++ b/04-apr-21/19-04/src/scss/_shapes.scss
@@ -1,4 +1,9 @@
+.upDown {
+  @include center;
+}
 .triangle {
+  @include center;
+  flex-direction: column;
   &::before,
   &::after {
     display: block;
