--- a/04-apr-21/19-04/src/scss/_animation.scss
+++ b/04-apr-21/19-04/src/scss/_animation.scss
@@ -7,6 +7,15 @@
   right: 25vw;
   top: 20vw;
 }
+.two {
+  animation-delay: 0.2s;
+}
+.three {
+  animation-delay: 0.4s;
+}
+.four {
+  animation-delay: 0.6s;
+}
 @keyframes fade-in {
   0% {
     @include hide;
