I am a freaking genius

--- a/05-may-21/04-05/style.css
+++ b/05-may-21/04-05/style.css
@@ -12,7 +12,7 @@
   transition: 0.4s;
   cursor: pointer;
   line-height: 1rem;
-  color: bisque;
+  color: papayawhip;
 }
 .close:hover {
   color: coral;
