--- a/05-may-21/27-05/new-app/src/scss/main.scss
+++ b/05-may-21/27-05/new-app/src/scss/main.scss
@@ -1,9 +1,57 @@
 body {
   background-color: peachpuff;
 }
-// div {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   flex-direction: column;
-// }
+div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+ul {
+  list-style: none;
+  width: 50vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+
+  li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    justify-content: start;
+    margin: 1rem;
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      font-size: 1.2rem;
+      justify-content: space-evenly;
+    }
+    .buttons {
+      font-size: 0.8rem;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+
+      &:hover {
+        cursor: pointer;
+      }
+      i {
+        background-color: salmon;
+        padding: 0.3rem;
+        margin: 0.2rem;
+        border-radius: 4px;
+        &:nth-child(2) {
+          background-color: olive;
+        }
+      }
+    }
+  }
+}
