set up template

--- a/05-may-21/27-05/new-app/src/scss/main.scss
+++ b/05-may-21/27-05/new-app/src/scss/main.scss
@@ -22,7 +22,7 @@ ul {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     margin: 1rem;
     div {
       display: flex;
