--- a/06-jun-21/08-06/axios/src/scss/main.scss
+++ b/06-jun-21/08-06/axios/src/scss/main.scss
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: antiquewhite;
+  background-color: lightgray;
 }
 .loading {
   font-size: 4rem;
