--- a/derKleineBesserwisser/scss-template/scss/base/_basic-setup.scss
+++ b/derKleineBesserwisser/scss-template/scss/base/_basic-setup.scss
@@ -3,3 +3,12 @@
   margin: 0;
   padding: 0;
 }
+// invisible scrollbar
+
+body {
+  -ms-overflow-style: none; // >>> IE, Edge
+  scrollbar-width: none; // >>> Firefox
+}
+body::-webkit-scrollbar {
+  display: none; // >>> Chrome, Safari, Opera
+}
